--- a/app/src/main/res/layout/fragment_game_description.xml
+++ b/app/src/main/res/layout/fragment_game_description.xml
@@ -41,12 +41,11 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/textview_rounded_corner"
-                android:backgroundTint="@color/textview_color"
                 android:fontFamily="@font/button_font"
+                android:textSize="20sp"
                 android:padding="50sp"
                 android:text="Some description"
-                android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textAlignment="center"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/start_game_button"
