--- a/app/src/main/res/layout/fragment_games_menu.xml
+++ b/app/src/main/res/layout/fragment_games_menu.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/gradient_background"
-    tools:context=".mainmenu.GamesMenuFragment">
+    tools:context="com.sumsung.minigames.mainmenu.GamesMenuFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
