--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,10 +28,10 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/login_field" />
+          app:layout_constraintTop_toBottomOf="@+id/email_field" />
 
       <EditText
-          android:id="@+id/login_field"
+          android:id="@+id/email_field"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
@@ -44,7 +44,7 @@
           app:layout_constraintTop_toTopOf="parent" />
 
       <Button
-          android:id="@+id/login_button"
+          android:id="@+id/sing_in_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Войти"
