--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/gradient_background"
     tools:context=".mainmenu.authorization.AuthorizationFragment">
 
     <com.google.android.material.tabs.TabLayout
@@ -12,6 +12,9 @@
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         android:contentDescription="tab"
+        android:background="@color/black_overlay"
+
+        app:tabTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
@@ -45,6 +48,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Назад"
+        android:backgroundTint="@color/purple_2"
+        android:fontFamily="@font/button_font"
+        android:textSize="20sp"
+        app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
