--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -63,6 +63,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Зарегестрироваться"
+            android:backgroundTint="@color/purple_2"
+            android:fontFamily="@font/button_font"
+            android:textSize="20sp"
+            app:cornerRadius="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
