--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -71,7 +71,7 @@
         app:layout_constraintBottom_toTopOf="@+id/main_buttons_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_button">
+        app:layout_constraintTop_toBottomOf="@+id/exit_account_button">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -130,13 +130,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/exit_account_button"
-        android:layout_width="109dp"
-        android:layout_height="58dp"
-        android:text="выйти"
+        android:layout_width="230dp"
+        android:layout_height="52dp"
+        android:backgroundTint="@color/purple_2"
+        android:fontFamily="@font/button_font"
+        android:text="выйти из системы"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/user_button" />
 
     <FrameLayout
         android:id="@+id/games_content"
