--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    tools:context=".mainmenu.authorization.AuthorizationFragment">
+    tools:context=".authorization.AuthorizationFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
