--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainmenu.authorization.LoginFragment">
+    tools:context=".authorization.LoginFragment">
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="308dp"
