--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sumsung.minigames.mainmenu.authorization.SignUpFragment">
+    tools:context=".authorization.SignUpFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="291dp"
@@ -62,7 +62,7 @@
             android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Зарегестрироваться"
+            android:text="Зарегистрироваться"
             android:backgroundTint="@color/purple_2"
             android:fontFamily="@font/button_font"
             android:textSize="20sp"
