--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,8 +7,8 @@
     tools:context=".authorization.LoginFragment">
 
    <androidx.constraintlayout.widget.ConstraintLayout
-       android:layout_width="308dp"
-       android:layout_height="170dp"
+       android:layout_width="307dp"
+       android:layout_height="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
@@ -23,8 +23,8 @@
           android:ems="10"
 
           android:hint="Электронная почта"
-          android:inputType="textEmailAddress"
           android:minHeight="48dp"
+          android:inputType="textEmailAddress"
 
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
@@ -49,14 +49,28 @@
           android:id="@+id/sing_in_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Войти"
           android:backgroundTint="@color/purple_2"
           android:fontFamily="@font/button_font"
+          android:text="Войти"
+          android:textSize="20sp"
+          app:cornerRadius="30dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/password_field" />
+
+      <Button
+          android:id="@+id/reset_password_button"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:backgroundTint="@color/purple_2"
+          android:fontFamily="@font/button_font"
+          android:text="Восстановить пароль"
           android:textSize="20sp"
           app:cornerRadius="30dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent" />
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/sing_in_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
