--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -59,12 +59,12 @@
           app:layout_constraintTop_toBottomOf="@+id/password_field" />
 
       <Button
-          android:id="@+id/reset_password_button"
+          android:id="@+id/to_reset_password_fragment_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/purple_2"
           android:fontFamily="@font/button_font"
-          android:text="Восстановить пароль"
+          android:text="Забыли пароль?"
           android:textSize="20sp"
           app:cornerRadius="30dp"
           app:layout_constraintBottom_toBottomOf="parent"
