--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -10,8 +10,8 @@
 
     <EditText
         android:id="@+id/email_for_password_reset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="352dp"
+        android:layout_height="52dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
         android:hint="Электронная почта"
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/reset_password_button_2"
+        android:id="@+id/reset_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_2"
