--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -61,67 +61,17 @@
 
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/record_card"
-        android:layout_width="221dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        app:cardCornerRadius="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/main_buttons_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_button">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/textview_color"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/game_record_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/button_font"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/game_record_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/button_font"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/game_record_3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/button_font"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/user_button"
         android:layout_width="246dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/textview_color"
         android:fontFamily="@font/button_font"
-        android:rotation="0"
-        android:rotationX="0"
-        android:rotationY="0"
         android:text="Name\nRating: 100"
         android:textAlignment="textStart"
         android:textColor="#00838F"
         android:textSize="20sp"
+        android:textAllCaps="false"
         app:cornerRadius="10sp"
         app:icon="@drawable/ic_user"
         app:iconSize="50sp"
@@ -139,87 +89,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/user_button" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/profile_card"
-        android:layout_width="312dp"
-        android:layout_height="457dp"
-        android:visibility="visible"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="@+id/games_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_button">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/exit_account_button"
-                android:layout_width="230dp"
-                android:layout_height="52dp"
-                android:backgroundTint="@color/purple_2"
-                android:fontFamily="@font/button_font"
-                android:text="выйти из системы"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                app:cornerRadius="30dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/save_changes_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purple_2"
-                android:fontFamily="@font/button_font"
-                android:text="Сохранить изменения"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                app:cornerRadius="30dp"
-                app:layout_constraintBottom_toTopOf="@+id/exit_account_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/change_name_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/editTextTextPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Старый пароль"
-                android:inputType="textPassword"
-                android:minHeight="48dp"
-                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/change_name_field" />
-
-            <EditText
-                android:id="@+id/editTextTextPassword2"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="121dp"
-                android:ems="10"
-                android:hint="Новый пароль"
-                android:inputType="textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
 
     <FrameLayout
         android:id="@+id/games_content"
