--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -28,10 +28,23 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="Восстановить"
+        android:text="Изменить пароль"
         android:textSize="20sp"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_for_password_reset" />
+
+    <Button
+        android:id="@+id/cancel_reset_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/purple_2"
+        android:fontFamily="@font/button_font"
+        android:text="Назад"
+        android:textSize="20sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reset_password_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
