--- a/app/src/main/res/drawable/right_answer_anim.xml
+++ b/app/src/main/res/drawable/right_answer_anim.xml
@@ -2,12 +2,12 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="true">
     <item
-        android:drawable="@color/purple"
+        android:drawable="@drawable/gradient_background"
         android:duration="0" />
     <item
         android:drawable="@color/spring_green"
         android:duration="100" />
     <item
-        android:drawable="@color/purple"
+        android:drawable="@drawable/gradient_background"
         android:duration="0" />
 </animation-list>
